# benchiq

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
docs/: cli.md  contributing.md
docs/design/: calibration_deployment.md  generalization_optimization_plan.md  irt_r_baseline.md  metabench_validation.md  metabench_validation_full_profile.json  post_alex_pivot_plan.md  preprocessing_optimization_plan.md  preselection_alternatives.md  reconstruction_head_experiments.md  schema.md  v0_1_scope.md
docs/specs/: benchiq_v0_1_spec.md
reports/: metabench_real_data_comparison.csv  metabench_real_data_comparison.md  metabench_real_data_notes.md
reports/budget_overlap_tuning/: decision.json  summary.md  synthetic_seed7_summary.csv  synthetic_seed7_summary.parquet
reports/calibration_deployment/: comparison.csv  comparison.parquet  dataset_metadata.json  reduced_test_responses.csv  report.json  summary.md
reports/deployment_validation/: deployment_metrics.csv  deployment_metrics.json  deployment_metrics.parquet  prediction_comparison.csv  prediction_comparison.parquet  reduced_test_responses.parquet  summary.md
scripts/: check_r_irt_parity.py  materialize_portfolio_sources.py  run_calibration_deployment_walkthrough.py  run_generalization_optimization.py  run_irt_backend_comparison.py  run_irt_r_baseline_comparison.py  run_metabench_real_data_comparison.py  run_portfolio_standing.py  run_preprocessing_optimization.py  run_preprocessing_variation_followup.py  run_reconstruction_head_comparison.py  run_selection_comparison.py  setup_r_irt_parity.R
(+2905 files in other folders)
