[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchiq"
version = "0.1.0a0"
description = "artifact-first benchmark bundle distillation and overlap analysis for llm evaluation matrices"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Jeremy Kalfus" }]
dependencies = [
  "click>=8.1,<9",
  "girth>=0.8.0",
  "joblib>=1.4,<2",
  "matplotlib>=3.10,<4",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "pyarrow>=18",
  "pydantic>=2.10,<3",
  "pygam>=0.11,<0.13",
  "scikit-learn>=1.6,<2",
  "scipy>=1.15,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchiq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
